# fail2ban-watcher-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: bans.rs  ip2location.rs  ipconverter.rs  main.rs  stats.rs
