[package]
name = "fail2ban-watcher-rs"
version = "0.2.0"
authors = ["Romain Ardiet <romain.ardiet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.5"
log = "0.4.22"
rust-embed = "8.5.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.216", features = ["derive"] }
