[package]
name = "fail2ban-watcher-rs"
version = "0.2.0"
authors = ["Romain Ardiet <romain.ardiet@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.6"
log = "0.4.26"
rust-embed = "8.6.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
