[package]
name = "fail2ban-watcher-rs"
version = "0.5.0"
authors = ["Romain Ardiet <contact@romainardiet.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
env_logger = "0.11.8"
log = "0.4.27"
rust-embed = "8.7.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
